--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5ab9703
-	trimbase = 
+	trim = icart_mini_gazebo
+	base = aea3d39
+	trimbase = 5ab9703
 	parent = upstream
 	previous = 6e8d6ac
