--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ca5e9ad
-	trimbase = 
+	trim = icart_mini_control
+	base = 573afbc
+	trimbase = ca5e9ad
 	parent = upstream
 	previous = 6e8d6ac
