--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = db43a75
-	trimbase = 
+	trim = force_rotate_recovery
+	base = 77142c6
+	trimbase = db43a75
 	parent = upstream
 	previous = 6e8d6ac
