--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = dd3df12
-	trimbase = 
+	trim = icart_mini_driver
+	base = 3a66324
+	trimbase = dd3df12
 	parent = upstream
 	previous = 6e8d6ac
