--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7993f40
-	trimbase = 
+	trim = combine_dr_measurements
+	base = 7ae3ca1
+	trimbase = 7993f40
 	parent = upstream
 	previous = 6e8d6ac
