--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = de1bde6
-	trimbase = 
+	trim = icart_mini
+	base = cf805e6
+	trimbase = de1bde6
 	parent = upstream
 	previous = 6e8d6ac
