--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bff2e86
-	trimbase = 
+	trim = icart_mini_description
+	base = 680fc7a
+	trimbase = bff2e86
 	parent = upstream
 	previous = 6e8d6ac
