--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6e92b57
-	trimbase = 
+	trim = icart_mini_navigation
+	base = 6f06f84
+	trimbase = 6e92b57
 	parent = upstream
 	previous = 6e8d6ac
