--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b01a1f6
-	trimbase = 
+	trim = waypoints_navigation
+	base = 8006318
+	trimbase = b01a1f6
 	parent = upstream
 	previous = 6e8d6ac
