--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ae68b7
+	base = c9d00e8
 	trimbase = 
 	parent = debian/indigo/force_rotate_recovery
-	previous = 
+	previous = 2ae68b7
