--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c8bfb9a
+	base = 7faeecb
 	trimbase = 
 	parent = debian/indigo/icart_mini
-	previous = 
+	previous = c8bfb9a
