--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6f06f84
+	base = 339f24f
 	trimbase = 
 	parent = release/indigo/icart_mini_navigation
-	previous = 
+	previous = 6f06f84
