--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84d1133
+	base = fad3723
 	trimbase = 
 	parent = debian/indigo/icart_mini_navigation
-	previous = 
+	previous = 84d1133
