--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 573afbc
+	base = 8db3808
 	trimbase = 
 	parent = release/indigo/icart_mini_control
-	previous = 
+	previous = 573afbc
