--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a4e125
+	base = 93b6c18
 	trimbase = 
 	parent = debian/indigo/waypoints_navigation
-	previous = 
+	previous = 6a4e125
