--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aea3d39
+	base = 48db8e3
 	trimbase = 
 	parent = release/indigo/icart_mini_gazebo
-	previous = 
+	previous = aea3d39
