--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0e386e
+	base = bb18f5f
 	trimbase = 
 	parent = debian/indigo/icart_mini_gazebo
-	previous = 
+	previous = b0e386e
