--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ae3ca1
+	base = 60af42a
 	trimbase = 
 	parent = release/indigo/combine_dr_measurements
-	previous = 
+	previous = 7ae3ca1
