--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8b78d74
+	base = 1acb63f
 	trimbase = 
 	parent = debian/indigo/combine_dr_measurements
-	previous = 
+	previous = 8b78d74
