--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87fe1bf
+	base = e13f185
 	trimbase = 
 	parent = debian/indigo/icart_mini_driver
-	previous = 
+	previous = 87fe1bf
