--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 680fc7a
+	base = 0f31f0f
 	trimbase = 
 	parent = release/indigo/icart_mini_description
-	previous = 
+	previous = 680fc7a
