--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 01838e1
+	base = 6577713
 	trimbase = 
 	parent = debian/indigo/icart_mini_description
-	previous = 
+	previous = 01838e1
