--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 77142c6
+	base = f157842
 	trimbase = 
 	parent = release/indigo/force_rotate_recovery
-	previous = 
+	previous = 77142c6
