--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 62e8225
+	base = 2531800
 	trimbase = 
 	parent = rpm/indigo/force_rotate_recovery
-	previous = 
+	previous = 62e8225
