--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf805e6
+	base = 2d7a9a2
 	trimbase = 
 	parent = release/indigo/icart_mini
-	previous = 
+	previous = cf805e6
