--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0fec911
+	base = 771afca
 	trimbase = 
 	parent = rpm/indigo/icart_mini
-	previous = 
+	previous = 0fec911
