--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d868f2
+	base = 4e04070
 	trimbase = 
 	parent = rpm/indigo/icart_mini_navigation
-	previous = 
+	previous = 9d868f2
