--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8e5167
+	base = b4a9460
 	trimbase = 
 	parent = rpm/indigo/icart_mini_control
-	previous = 
+	previous = a8e5167
