--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8006318
+	base = c2b6a6a
 	trimbase = 
 	parent = release/indigo/waypoints_navigation
-	previous = 
+	previous = 8006318
