--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 008f5de
+	base = 336ef79
 	trimbase = 
 	parent = rpm/indigo/waypoints_navigation
-	previous = 
+	previous = 008f5de
