--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 63b5586
+	base = 0b7c4d9
 	trimbase = 
 	parent = rpm/indigo/icart_mini_gazebo
-	previous = 
+	previous = 63b5586
