--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 85ecb5f
+	base = 5998b59
 	trimbase = 
 	parent = rpm/indigo/combine_dr_measurements
-	previous = 
+	previous = 85ecb5f
