--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a66324
+	base = 3fd60a8
 	trimbase = 
 	parent = release/indigo/icart_mini_driver
-	previous = 
+	previous = 3a66324
