--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = feb082c
+	base = 66dcd74
 	trimbase = 
 	parent = rpm/indigo/icart_mini_driver
-	previous = 
+	previous = feb082c
