--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da98e79
+	base = 15b5c52
 	trimbase = 
 	parent = rpm/indigo/icart_mini_description
-	previous = 
+	previous = da98e79
