--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 6e836a3
-	trimbase = 
+	base = d20d981
+	trimbase = 6e836a3
 	parent = upstream
 	previous = 6e8d6ac
