--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 5219696
-	trimbase = 
+	base = c3c6053
+	trimbase = 5219696
 	parent = upstream
 	previous = 6e8d6ac
