--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = 77142c6
-	trimbase = db43a75
+	trimbase = 
 	parent = upstream
 	previous = 6e8d6ac
