--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 768c789
-	trimbase = 
+	base = 742eab9
+	trimbase = 768c789
 	parent = upstream
 	previous = 6e8d6ac
