--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = b929e3f
-	trimbase = 
+	base = bf69dda
+	trimbase = b929e3f
 	parent = upstream
 	previous = 6e8d6ac
