--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 9076297
-	trimbase = 
+	base = b8460fe
+	trimbase = 9076297
 	parent = upstream
 	previous = 6e8d6ac
