--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
-	base = de04230
-	trimbase = 
+	base = 73992de
+	trimbase = de04230
 	parent = upstream
 	previous = 6e8d6ac
