--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = 6bed56a
-	trimbase = 
+	base = 408517e
+	trimbase = 6bed56a
 	parent = upstream
 	previous = 6e8d6ac
