--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.3-0": ["Tue Dec 02 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
+{"0.0.3-1": ["Tue Dec 02 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"], "0.0.3-0": ["Tue Dec 02 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
