--- a/waypoints_navigation/package.xml
+++ b/waypoints_navigation/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>waypoints_navigation</name>
-  <version>0.0.3</version>
+  <version>0.0.5</version>
   <description>The waypoints_navigation package</description>
 
   <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
+  <author>Daiki Maekawa</author>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
