--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 7e85eec
-	trimbase = 
+	base = 3172be7
+	trimbase = 7e85eec
 	parent = upstream
 	previous = 4811737
