--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = f8013ec
-	trimbase = 
+	base = 50fcc4e
+	trimbase = f8013ec
 	parent = upstream
 	previous = 4811737
