--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = a881382
-	trimbase = f9c26f8
+	trimbase = 
 	parent = upstream
 	previous = 6e8d6ac
