--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
-	base = 8b33a9d
-	trimbase = 
+	base = e5d54d5
+	trimbase = 8b33a9d
 	parent = upstream
 	previous = 4811737
