--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 79a8e91
-	trimbase = 
+	base = ccb63dd
+	trimbase = 79a8e91
 	parent = upstream
 	previous = 4811737
