--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 3585392
-	trimbase = 
+	base = e471928
+	trimbase = 3585392
 	parent = upstream
 	previous = 4811737
