--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = b8460fe
-	trimbase = 9076297
+	trimbase = 
 	parent = upstream
 	previous = 6e8d6ac
