--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 9d20498
-	trimbase = 
+	base = f894064
+	trimbase = 9d20498
 	parent = upstream
 	previous = 4811737
