--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
-	base = acdfb20
-	trimbase = 
+	base = ca2f973
+	trimbase = acdfb20
 	parent = upstream
 	previous = 4811737
