--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0"?>
 <package>
   <name>icart_mini_control</name>
-  <version>0.0.3</version>
+  <version>0.0.5</version>
   <description>The icart_mini_control package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
+  <author>Daiki Maekawa</author>
   <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
 
 
