--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 15d326c
-	trimbase = 
+	base = 8c64dd6
+	trimbase = 15d326c
 	parent = upstream
 	previous = 26e8498
