--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 98fd089
-	trimbase = 
+	base = 88dc784
+	trimbase = 98fd089
 	parent = upstream
 	previous = 26e8498
