--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 8963c87
-	trimbase = 
+	base = db6ec45
+	trimbase = 8963c87
 	parent = upstream
 	previous = 26e8498
