--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
 	base = 5b5ee54
-	trimbase = d5718d9
+	trimbase = 
 	parent = upstream
 	previous = 4811737
