--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 80495a1
-	trimbase = 
+	base = 5950c23
+	trimbase = 80495a1
 	parent = upstream
 	previous = 26e8498
