--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = f894064
-	trimbase = 9d20498
+	trimbase = 
 	parent = upstream
 	previous = 4811737
