--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
 	base = 9d61437
-	trimbase = c70c948
+	trimbase = 
 	parent = upstream
 	previous = 4811737
