--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = fe4ffaf
-	trimbase = 
+	base = 7a816eb
+	trimbase = fe4ffaf
 	parent = upstream
 	previous = 26e8498
