--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>icart_mini_driver</name>
-  <version>0.0.5</version>
+  <version>0.1.1</version>
   <description>The icart_mini_driver package</description>
 
   <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
+  <author>Daiki Maekawa</author>
 
   <license>BSD</license>
 
