--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65cba27
+	base = fec8a27
 	trimbase = 
 	parent = rpm/indigo/force_rotate_recovery
-	previous = 
+	previous = 65cba27
