--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1ad04af
+	base = a3d0acc
 	trimbase = 
 	parent = rpm/indigo/icart_mini
-	previous = 
+	previous = 1ad04af
