--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec985d4
+	base = 693d7cd
 	trimbase = 
 	parent = rpm/indigo/icart_mini_navigation
-	previous = 
+	previous = ec985d4
