--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b6595b5
+	base = 5519b72
 	trimbase = 
 	parent = rpm/indigo/icart_mini_control
-	previous = 
+	previous = b6595b5
