--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d318437
+	base = e59123a
 	trimbase = 
 	parent = rpm/indigo/waypoints_navigation
-	previous = 
+	previous = d318437
