--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 320286e
+	base = dc334f3
 	trimbase = 
 	parent = rpm/indigo/icart_mini_gazebo
-	previous = 
+	previous = 320286e
