--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dd1bb2e
+	base = 4b3f307
 	trimbase = 
 	parent = rpm/indigo/combine_dr_measurements
-	previous = 
+	previous = dd1bb2e
