--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 764a310
+	base = 78ed128
 	trimbase = 
 	parent = rpm/indigo/icart_mini_driver
-	previous = 
+	previous = 764a310
