--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 78ea0c5
+	base = 79bed28
 	trimbase = 
 	parent = rpm/indigo/icart_mini_description
-	previous = 
+	previous = 78ea0c5
