--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 93a64eb
-	trimbase = 
+	base = e9c0920
+	trimbase = 93a64eb
 	parent = upstream
 	previous = 26e8498
