--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = e2a7bd2
-	trimbase = 
+	base = f22e40a
+	trimbase = e2a7bd2
 	parent = upstream
 	previous = 26e8498
