--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = ed262a6
-	trimbase = c39d432
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
