--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 2b106bb
-	trimbase = 
+	base = ca0355c
+	trimbase = 2b106bb
 	parent = upstream
 	previous = 26e8498
