--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
 	base = cc9ba4c
-	trimbase = be6ff24
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
