--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 9b0abc7
-	trimbase = 
+	base = c978581
+	trimbase = 9b0abc7
 	parent = upstream
 	previous = 26e8498
