--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 18f64f3
-	trimbase = 
+	base = e94c54f
+	trimbase = 18f64f3
 	parent = upstream
 	previous = 26e8498
