--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = 7252506
-	trimbase = 38af3a0
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
