--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 77e8c52
-	trimbase = 
+	base = e21d8f2
+	trimbase = 77e8c52
 	parent = upstream
 	previous = 26e8498
