--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = e9d6141
-	trimbase = 63b5de1
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
