--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
 	base = 7a816eb
-	trimbase = fe4ffaf
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
