--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = f3e291f
-	trimbase = 
+	base = a2e96d7
+	trimbase = f3e291f
 	parent = upstream
 	previous = 26e8498
