--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 072582a
-	trimbase = 
+	base = 3cbf4d4
+	trimbase = 072582a
 	parent = upstream
 	previous = 26e8498
