--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 7c76b4a
-	trimbase = 
+	base = 06eb8fc
+	trimbase = 7c76b4a
 	parent = upstream
 	previous = 26e8498
