--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = 7cdac35
-	trimbase = 1d834e3
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
