--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = e3aa368
-	trimbase = 
+	base = 8525585
+	trimbase = e3aa368
 	parent = upstream
 	previous = 26e8498
