--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = b0f8ab1
-	trimbase = 
+	base = b0cc677
+	trimbase = b0f8ab1
 	parent = upstream
 	previous = 26e8498
