--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = fdecd63
-	trimbase = 
+	base = c4ed3e0
+	trimbase = fdecd63
 	parent = upstream
 	previous = 26e8498
