--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = 27a28a3
-	trimbase = 20a0df9
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
