--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = d3bcaf5
-	trimbase = 
+	base = dda3cf4
+	trimbase = d3bcaf5
 	parent = upstream
 	previous = 26e8498
