--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1-0": ["Wed Dec 17 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"], "0.1.1-1": ["Wed Dec 17 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
+{"0.1.1-0": ["Wed Dec 17 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"], "0.1.1-1": ["Wed Dec 17 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"], "0.1.1-2": ["Wed Dec 17 2014", "Daiki Maekawa", "method_aspect_card@yahoo.co.jp"]}
