--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 1c9ccfa
-	trimbase = 
+	base = 178192a
+	trimbase = 1c9ccfa
 	parent = upstream
 	previous = e1ed0dd
