--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 5616bc5
-	trimbase = 
+	base = 7a809a7
+	trimbase = 5616bc5
 	parent = upstream
 	previous = e1ed0dd
