--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = 098ffac
-	trimbase = 5912545
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
