--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
-	base = 5e569ec
-	trimbase = 
+	base = dc57341
+	trimbase = 5e569ec
 	parent = upstream
 	previous = e1ed0dd
