--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 4f3252c
-	trimbase = 
+	base = dd0d28b
+	trimbase = 4f3252c
 	parent = upstream
 	previous = e1ed0dd
