--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
 	base = d6884e7
-	trimbase = 27205ee
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
