--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 90a6133
-	trimbase = 
+	base = cea518c
+	trimbase = 90a6133
 	parent = upstream
 	previous = e1ed0dd
