--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 83529ee
-	trimbase = 
+	base = 2acb39d
+	trimbase = 83529ee
 	parent = upstream
 	previous = e1ed0dd
