--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = c4ed3e0
-	trimbase = fdecd63
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
