--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 56fb8d6
-	trimbase = 
+	base = 90b54aa
+	trimbase = 56fb8d6
 	parent = upstream
 	previous = e1ed0dd
