--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = 603efd8
-	trimbase = fd5f630
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
