--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
 	base = dda3cf4
-	trimbase = d3bcaf5
+	trimbase = 
 	parent = upstream
 	previous = 26e8498
