--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = 92329e4
-	trimbase = 
+	base = f4d8d5a
+	trimbase = 92329e4
 	parent = upstream
 	previous = e1ed0dd
