--- a/package.xml
+++ b/package.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>icart_mini</name>
-  <version>0.1.1</version>
-  <description>The icart_mini metapackage</description>
+  <version>0.1.2</version>
+  <description>This package provides packages related to navigation of i-Cart mini.</description>
   <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
   <author>Daiki Maekawa</author>
+  <url type="website">http://wiki.ros.org/icart_mini</url>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>force_rotate_recovery</run_depend>
