--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <package>
   <name>waypoints_navigation</name>
-  <version>0.1.1</version>
+  <version>0.1.2</version>
   <description>The waypoints_navigation package</description>
 
   <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
   <author>Daiki Maekawa</author>
+  <url type="website">http://wiki.ros.org/waypoints_navigation</url>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
