--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = 8d522f0
-	trimbase = 
+	base = 46a30e8
+	trimbase = 8d522f0
 	parent = upstream
 	previous = e1ed0dd
