--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 7a30a3f
-	trimbase = 
+	base = b2cc212
+	trimbase = 7a30a3f
 	parent = upstream
 	previous = e1ed0dd
