--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
-	base = 88620ea
-	trimbase = 
+	base = d550e82
+	trimbase = 88620ea
 	parent = upstream
 	previous = e1ed0dd
