--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 50ce191
-	trimbase = 
+	base = 3a29ba4
+	trimbase = 50ce191
 	parent = upstream
 	previous = e1ed0dd
