--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
 	base = cea518c
-	trimbase = 90a6133
+	trimbase = 
 	parent = upstream
 	previous = e1ed0dd
