--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 04df53b
-	trimbase = 
+	base = 1ccf4c0
+	trimbase = 04df53b
 	parent = upstream
 	previous = e1ed0dd
