--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 9f26dc1
-	trimbase = 
+	base = a0b2990
+	trimbase = 9f26dc1
 	parent = upstream
 	previous = e1ed0dd
