--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = eb9845b
-	trimbase = 
+	base = c76b603
+	trimbase = eb9845b
 	parent = upstream
 	previous = e1ed0dd
