--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = c7298a5
-	trimbase = 7b60394
+	trimbase = 
 	parent = upstream
 	previous = e1ed0dd
