--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
-	base = 1e1f8ec
-	trimbase = 
+	base = 81fe43e
+	trimbase = 1e1f8ec
 	parent = upstream
 	previous = e1ed0dd
