--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = 3e229fa
-	trimbase = 
+	base = 1b1ef23
+	trimbase = 3e229fa
 	parent = upstream
 	previous = e1ed0dd
