--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = ea535b7
-	trimbase = 
+	base = 7d36967
+	trimbase = ea535b7
 	parent = upstream
 	previous = 2d9dcde
