--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = 831ea3c
-	trimbase = 
+	base = fe2f6c1
+	trimbase = 831ea3c
 	parent = upstream
 	previous = 2d9dcde
