--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
 	base = d550e82
-	trimbase = 88620ea
+	trimbase = 
 	parent = upstream
 	previous = e1ed0dd
