--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
-	base = a93d8d8
-	trimbase = 
+	base = 550fa72
+	trimbase = a93d8d8
 	parent = upstream
 	previous = 2d9dcde
