--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = 6ac8eb2
-	trimbase = 
+	base = 8b28147
+	trimbase = 6ac8eb2
 	parent = upstream
 	previous = 2d9dcde
