--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 28eeae6
-	trimbase = 
+	base = d6b16fd
+	trimbase = 28eeae6
 	parent = upstream
 	previous = 2d9dcde
