--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 27b5618
-	trimbase = 
+	base = d5af014
+	trimbase = 27b5618
 	parent = upstream
 	previous = 2d9dcde
