--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = c76b603
-	trimbase = eb9845b
+	trimbase = 
 	parent = upstream
 	previous = e1ed0dd
