--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 13f0eec
-	trimbase = 
+	base = 2b65245
+	trimbase = 13f0eec
 	parent = upstream
 	previous = 2d9dcde
