--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = 81fe43e
-	trimbase = 1e1f8ec
+	trimbase = 
 	parent = upstream
 	previous = e1ed0dd
