--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = c81989f
-	trimbase = 
+	base = f04fb54
+	trimbase = c81989f
 	parent = upstream
 	previous = 2d9dcde
