--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_gazebo
-	base = a6afc8c
-	trimbase = 
+	base = e55a8f2
+	trimbase = a6afc8c
 	parent = upstream
 	previous = 2d9dcde
