--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_control
-	base = b11eec6
-	trimbase = 
+	base = 6f3926f
+	trimbase = b11eec6
 	parent = upstream
 	previous = 2d9dcde
