--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = force_rotate_recovery
-	base = c09d83d
-	trimbase = 
+	base = 88d4cd0
+	trimbase = c09d83d
 	parent = upstream
 	previous = 2d9dcde
