--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_driver
-	base = b61919d
-	trimbase = 
+	base = ecb21a9
+	trimbase = b61919d
 	parent = upstream
 	previous = 2d9dcde
