--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = combine_dr_measurements
-	base = 3ed3a61
-	trimbase = 
+	base = 9c5bb2f
+	trimbase = 3ed3a61
 	parent = upstream
 	previous = 2d9dcde
