--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini
-	base = 718a474
-	trimbase = 
+	base = 09c2d31
+	trimbase = 718a474
 	parent = upstream
 	previous = 2d9dcde
