--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
 	base = 2b65245
-	trimbase = 13f0eec
+	trimbase = 
 	parent = upstream
 	previous = 2d9dcde
