--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_description
-	base = 736df08
-	trimbase = 
+	base = 408c4f8
+	trimbase = 736df08
 	parent = upstream
 	previous = 2d9dcde
