--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
 	base = ade5a5e
-	trimbase = f8fd39b
+	trimbase = 
 	parent = upstream
 	previous = 2d9dcde
