--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = icart_mini_navigation
-	base = e8044c0
-	trimbase = 
+	base = 5ffa8e1
+	trimbase = e8044c0
 	parent = upstream
 	previous = 2d9dcde
