--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = waypoints_navigation
-	base = 3ec058d
-	trimbase = 
+	base = b811c80
+	trimbase = 3ec058d
 	parent = upstream
 	previous = 2d9dcde
